# renamer

./: .gitignore  LICENSE  Makefile  README.rst  pyproject.toml
docs/: api.rst  conf.py  index.rst
src/renamer/: __init__.py  cli.py  renamer.py
tests/: __init__.py  test_renamer.py
